problem fix found