@@ -1,2 +1,2 @@
 #!/bin/sh
-/home/steffen/Projekte/open-jdk-12/bin/java -cp lib/*:/home/steffen/Projekte/open-javafx-sdk-11/lib/* --add-modules javafx.controls,javafx.graphics -jar alltime_2.1.0-SNAPSHOT.jar
+/home/steffen/Projekte/open-jdk-12/bin/java -cp 'lib/*' -p 'module'm com.webnobis.alltime.Alltime/com.webnobis.alltime.Alltime
